Trying to fix zoomed in view on mobile

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -5,6 +5,7 @@ body,
   height: 100%;
 
   font-family: "Bodoni";
+  overflow-x: hidden;
 }
 
 @font-face {
